deployment-object-detection-app.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/connects-to: >-
      [{"apiVersion":"apps/v1","kind":"Deployment","name":"object-detection-rest"}]
    app.openshift.io/vcs-ref: ''
    app.openshift.io/vcs-uri: 'https://github.com/rh-aiservices-bu/object-detection-app.git'
    deployment.kubernetes.io/revision: '2'
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"object-detection-app:latest","namespace":"ml-models"},"fieldPath":"spec.template.spec.containers[?(@.name==\"object-detection-app\")].image","pause":"false"}]
    openshift.io/generated-by: OpenShiftWebConsole
  name: object-detection-app
  labels:
    app: object-detection-app
    app.kubernetes.io/component: object-detection-app
    app.kubernetes.io/instance: object-detection-app
    app.kubernetes.io/name: object-detection-app
    app.kubernetes.io/part-of: object-detection
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-version: 14-ubi8
spec:
  replicas: 1
  selector:
    matchLabels:
      app: object-detection-app
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: object-detection-app
        deploymentconfig: object-detection-app
    spec:
      containers:
        - name: object-detection-app
          image: image-registry.openshift-image-registry.svc:5000/ml-models/object-detection-app:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
