deployment-object-detection-rest.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/vcs-ref: ''
    app.openshift.io/vcs-uri: 'https://github.com/rh-aiservices-bu/object-detection-rest.git'
    deployment.kubernetes.io/revision: '5'
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"object-detection-rest:latest","namespace":"ml-models"},"fieldPath":"spec.template.spec.containers[?(@.name==\"object-detection-rest\")].image","pause":"false"}]
    openshift.io/generated-by: OpenShiftWebConsole
  name: object-detection-rest
  labels:
    app: object-detection-rest
    app.kubernetes.io/component: object-detection-rest
    app.kubernetes.io/instance: object-detection-rest
    app.kubernetes.io/name: object-detection-rest
    app.kubernetes.io/part-of: object-detection
    app.openshift.io/runtime: python
    app.openshift.io/runtime-version: 3.8-ubi8
spec:
  replicas: 1
  selector:
    matchLabels:
      app: object-detection-rest
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: object-detection-rest
        deploymentconfig: object-detection-rest
    spec:
      containers:
        - name: object-detection-rest
          image: image-registry.openshift-image-registry.svc:5000/ml-models/object-detection-rest:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
