service-object-detection-app.yaml
kind: Service
apiVersion: v1
metadata:
  name: object-detection-app
  labels:
    app: object-detection-app
    app.kubernetes.io/component: object-detection-app
    app.kubernetes.io/instance: object-detection-app
    app.kubernetes.io/name: object-detection-app
    app.kubernetes.io/part-of: object-detection
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-version: 14-ubi8
  annotations:
    app.openshift.io/connects-to: >-
      [{"apiVersion":"apps/v1","kind":"Deployment","name":"object-detection-rest"}]
    app.openshift.io/vcs-ref: ''
    app.openshift.io/vcs-uri: 'https://github.com/rh-aiservices-bu/object-detection-app.git'
    openshift.io/generated-by: OpenShiftWebConsole
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: object-detection-app
    deploymentconfig: object-detection-app
